--- a/index.html
+++ b/index.html
@@ -89,51 +89,24 @@ p { max-width:1000px; text-align:justify; font-size:1.2rem; color:#dcdcdc; line-
 <!-- INTRO -->
 <section class="section" id="intro">
   <h2 class="text-animate">Introduction</h2>
-
   <div class="row">
     <img src="3.jpg" alt="Whole Raspberry Pi">
-    <p>The Raspberry Pi 5 brings desktop-grade performance to a compact board.  
-    It features powerful hardware, modern connectivity, and flexibility for a wide range of projects, from learning to professional applications.</p>
+    <p>The Raspberry Pi 5 delivers desktop-class performance in a compact form factor. Its powerful CPU, GPU, and expanded I/O make it suitable for learning, development, and professional projects.</p>
   </div>
 
   <div class="row reverse">
     <img src="1.jpg" alt="RAM">
-    <p>Available with 4GB or 8GB LPDDR4X RAM, the Pi 5 supports faster memory access and multitasking, ideal for demanding software and multitasking applications.</p>
+    <p>Memory options of 4GB and 8GB LPDDR4X ensure smooth multitasking and improved performance for complex applications.</p>
   </div>
 
   <div class="row">
     <img src="6.jpg" alt="NVMe SSD">
-    <p>NVMe SSD support via PCIe 2.0 allows ultra-fast storage options, complementing microSD for quick testing and flexibility in storage setups.</p>
+    <p>NVMe SSD support via PCIe 2.0 provides high-speed storage options for faster data access compared to microSD cards.</p>
   </div>
 
   <div class="row reverse">
     <img src="8.jpg" alt="Ports closeup">
-    <p>Connectivity includes USB 3.0 and 2.0, Gigabit Ethernet, dual HDMI, and a PCIe port for expansion. Users can easily connect displays, storage, and peripherals.</p>
-  </div>
-
-  <div class="row">
-    <img src="4.jpg" alt="Ethernet port">
-    <p>Ethernet and Wi-Fi 5 provide reliable network access for remote work, IoT, and home automation projects.</p>
-  </div>
-
-  <div class="row reverse">
-    <img src="18.jpg" alt="OpenGL logo">
-    <p>Multimedia support with dual 4K displays, HDR, and OpenGL 3.1 makes the Pi 5 capable of media playback, gaming, and graphical applications.</p>
-  </div>
-
-  <div class="row">
-    <img src="14.jpg" alt="Audio attachment">
-    <p>Audio output options allow for media projects, sound systems, or voice-enabled applications with clarity and flexibility.</p>
-  </div>
-
-  <div class="row reverse">
-    <img src="15.jpg" alt="Python logo">
-    <p>AI and automation capabilities are enhanced with TensorFlow Lite, OpenCV, and GPIO interfaces, enabling robotics, home automation, and machine learning projects.</p>
-  </div>
-
-  <div class="row">
-    <img src="16.jpg" alt="C++ logo">
-    <p>Programming in Python, C/C++, Rust, and other languages is fully supported, making the Pi 5 a versatile platform for learning and professional development.</p>
+    <p>Modern connectivity includes USB 3.0, HDMI, Gigabit Ethernet, and a PCIe port, allowing a variety of expansions and peripherals.</p>
   </div>
 </section>
 
@@ -143,17 +116,17 @@ p { max-width:1000px; text-align:justify; font-size:1.2rem; color:#dcdcdc; line-
 
   <div class="row">
     <img src="9.jpg" alt="Ubuntu logo">
-    <p>Raspberry Pi OS (Bookworm 64-bit) is optimized for stability and performance. The Pi 5 also runs Ubuntu, Manjaro, and other Linux distributions with ease.</p>
+    <p>Raspberry Pi OS and Ubuntu offer stable and optimized environments for coding, media, and IoT projects.</p>
   </div>
 
   <div class="row reverse">
     <img src="10.jpg" alt="Linux logo">
-    <p>Developers can use a variety of programming languages, IDEs, and tools. Compatibility with modern software ensures projects run smoothly and efficiently.</p>
+    <p>Developers can use languages like Python, C/C++, Rust, and Node.js to create diverse applications.</p>
   </div>
 
   <div class="row">
     <img src="images.png" alt="VNC logo">
-    <p>Remote access tools like VNC and SSH allow users to control their Pi devices from anywhere, making development, monitoring, and administration seamless.</p>
+    <p>Remote access tools like VNC and SSH allow seamless device control and monitoring from anywhere.</p>
   </div>
 </section>
 
@@ -163,47 +136,47 @@ p { max-width:1000px; text-align:justify; font-size:1.2rem; color:#dcdcdc; line-
 
   <div class="row">
     <img src="2.jpg" alt="Processor">
-    <p>The Broadcom BCM2712 quad-core ARM Cortex-A76 CPU and VideoCore VII GPU deliver desktop-class performance, powering demanding applications and graphics processing.</p>
+    <p>The Broadcom BCM2712 CPU and VideoCore VII GPU deliver impressive performance for demanding tasks.</p>
   </div>
 
   <div class="row reverse">
     <img src="7.jpg" alt="Ports overview">
-    <p>All essential ports, including USB, HDMI, Ethernet, and PCIe, are easily accessible and organized for efficient connectivity and expansion.</p>
+    <p>All ports, including USB, HDMI, and PCIe, are accessible and well organized for easy connectivity.</p>
   </div>
 
   <div class="row">
     <img src="11.jpg" alt="Cooling attachment">
-    <p>Active cooling attachments and heatsinks ensure the board maintains optimal temperatures under heavy workloads, preventing throttling.</p>
+    <p>Active cooling and heatsinks keep the Pi 5 cool under heavy workloads, maintaining consistent performance.</p>
   </div>
 
   <div class="row reverse">
     <img src="12.jpg" alt="Size comparison">
-    <p>The Pi 5 remains compact, comparable in size to a credit card, while integrating significantly more powerful hardware and features.</p>
+    <p>The Pi 5 remains compact, comparable in size to a credit card, while packing significantly more hardware.</p>
   </div>
 
   <div class="row">
     <img src="13.jpg" alt="Display attachment">
-    <p>Display attachments enable dual-monitor setups for dashboards, kiosks, or media applications, enhancing productivity and visual experiences.</p>
+    <p>Display attachments support dual-monitor setups, perfect for media, dashboards, or development applications.</p>
   </div>
 
   <div class="row reverse">
     <img src="14.jpg" alt="Audio attachment">
-    <p>Audio HATs and attachments expand sound capabilities, supporting multimedia, music projects, and interactive applications.</p>
+    <p>Audio outputs enable sound projects, music playback, and interactive media applications.</p>
   </div>
 
   <div class="row">
     <img src="20.jpg" alt="Power graph">
-    <p>Power management ensures stable 5V/5A USB-C supply, efficient energy consumption, and long-term device reliability.</p>
+    <p>Power management ensures reliable performance with a 5V/5A USB-C supply while minimizing energy use.</p>
   </div>
 
   <div class="row reverse">
     <img src="21.jpg" alt="Price graph">
-    <p>Despite the performance increase, the Pi 5 remains affordable, providing excellent value for makers, educators, and professionals.</p>
+    <p>The Pi 5 remains affordable, delivering excellent value for both educational and professional users.</p>
   </div>
 
   <div class="row">
     <img src="17.jpg" alt="WiFi logo">
-    <p>Networking and security features include Wi-Fi 5, Gigabit Ethernet, and secure boot options for safe, connected operation.</p>
+    <p>Networking features include Wi-Fi 5 and Gigabit Ethernet, ensuring stable connectivity for all applications.</p>
   </div>
 </section>
 
@@ -213,12 +186,12 @@ p { max-width:1000px; text-align:justify; font-size:1.2rem; color:#dcdcdc; line-
 
   <div class="row">
     <img src="22.jpg" alt="Schematics diagram">
-    <p>The Raspberry Pi 5 sets a new standard in single-board computing with its modern hardware, versatile connectivity, and exceptional performance.</p>
+    <p>The Raspberry Pi 5 redefines single-board computing, combining performance, versatility, and affordability in one compact package.</p>
   </div>
 
   <div class="row reverse">
     <img src="3.jpg" alt="Whole Raspberry Pi">
-    <p>Whether for learning, development, automation, or media projects, the Pi 5 offers flexibility and power at an accessible price, continuing the legacy of innovation.</p>
+    <p>Whether for learning, development, AI, media, or automation, the Pi 5 offers a platform that can handle almost any project.</p>
   </div>
 </section>
 
